# JoyCursor

./: .gitignore  CMakeLists.txt  README.md  mappings.json
experiments/: README.md
experiments/controller_detection/: CMakeLists.txt  README.md
experiments/controller_detection/src/: controller_detector.cpp
experiments/controller_keyboard_mapping/: CMakeLists.txt
experiments/controller_keyboard_mapping/src/: keyboard_mapper.cpp
experiments/controller_mouse_mapping/: CMakeLists.txt  README.md
experiments/controller_mouse_mapping/src/: controller_restore.cpp  mouse_mapper.cpp
experiments/controller_scroll_mapping/: CMakeLists.txt
experiments/controller_scroll_mapping/src/: scroll_mapper.cpp
experiments/sdl3/controller_detection/: CMakeLists.txt
experiments/sdl3/controller_detection/src/: controller_detector.cpp
experiments/sdl3/controller_keyboard_mapping/: CMakeLists.txt
experiments/sdl3/controller_keyboard_mapping/src/: keyboard_mapper.cpp
experiments/sdl3/controller_mouse_mapping/: CMakeLists.txt
experiments/sdl3/controller_mouse_mapping/src/: mouse_mapper.cpp
experiments/sdl3/controller_scroll_mapping/: CMakeLists.txt
experiments/sdl3/controller_scroll_mapping/src/: scroll_mapper.cpp
src/: core_main.cpp  main.cpp
src/core/: config.cpp  config.h  controller_manager.cpp  controller_manager.h  joycursor_core.cpp  joycursor_core.h  mapping_manager.cpp  mapping_manager.h  types.h
src/platform/linux/: controller_input_linux.cpp  controller_input_linux.h
src/platform/windows/: controller_input_win.cpp  controller_input_win.h
src/resources/: mappings.json  resources.qrc
src/ui/: ControllerCustomizationWindow.cpp  ControllerCustomizationWindow.h  ControllerLibraryWindow.cpp  ControllerLibraryWindow.h  MainWindow.cpp  MainWindow.h
src/utils/: logging.cpp  logging.h
src/workers/: ControllerWorker.cpp  ControllerWorker.h  CoreWorker.cpp  CoreWorker.h
